styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  padding: 0;
  margin: 0;
  color: white;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  postition: relative;
  overflow-x: hidden;

  /* background-color: rgba(9, 13, 45, 1); */
}

body::before {
  filter: blur(30px);
  background-image: url("https://thumbs.dreamstime.com/b/dark-futuristic-sci-fi-glass-tunnel-d-illustration-background-wallpaper-future-scifi-glass-building-d-rendering-design-dark-159545882.jpg");
  transform: scale(1.1);
  /* background-repeat: repeat-y; */
  background-size: cover;
  content: "";
  height: 100%;
  width: 100%;
  position: absolute;
  z-index: -1;
}

.text-gradient {
  background: linear-gradient(to right, #30cfd0, #c43ad6);
  /* background: linear-gradient(to right, #30cfd0, rgb(74, 222, 168)); */
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.btn {
  @apply font-[Poppins]  rounded-md text-3xl cursor-pointer bg-gray-200 text-black;
  transition: box-shadow 1 ease-in-out;
}
.btn:hover {
  animation: glow 0.3s forwards;
}
@keyframes glow {
  0% {
    box-shadow: none;
  }
  100% {
    box-shadow: white 0px 0px 10px 0px;
  }
}
.text-red {
  @apply text-red-400;
}
.text-blue {
  @apply text-blue-400;
}
.text-yellow {
  @apply text-yellow-400;
}
.text-green {
  @apply text-green-400;
}

.text-glow {
  text-shadow: 0 0 80px rgb(192 219 255 / 75%), 0 0 32px rgb(65 120 255 / 24%);
}

@font-face {
  font-family: "brussels";
  src: url("/fonts/brussels.otf");
}
@font-face {
  font-family: "blast";
  src: url("/fonts/HellostyBlast.ttf");
}
.blink {
  animation: blink 0.8s infinite;
}

@keyframes blink {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}
a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

